Port task engine records and APIs to 1.12.2